# openapi/openapi.interno.json
@@ -36,6 +36,27 @@
                       ],
                       "type": "string"
                     },
+                    "publicadoPor": {
+                      "additionalProperties": false,
+                      "properties": {
+                        "id": {
+                          "format": "uuid",
+                          "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
+                          "type": "string"
+                        },
+                        "nombre": {
+                          "type": "string"
+                        }
+                      },
+                      "required": [
+                        "id",
+                        "nombre"
+                      ],
+                      "type": [
+                        "object",
+                        "null"
+                      ]
+                    },
                     "texto": {
                       "type": "string"
                     },
@@ -51,7 +72,8 @@
                   "required": [
                     "version",
                     "origen",
-                    "texto"
+                    "texto",
+                    "publicadoPor"
                   ],
                   "type": "object"
                 }
@@ -512,6 +534,27 @@
                           "fecha": {
                             "type": "string"
                           },
+                          "publicadoPor": {
+                            "additionalProperties": false,
+                            "properties": {
+                              "id": {
+                                "format": "uuid",
+                                "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
+                                "type": "string"
+                              },
+                              "nombre": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "id",
+                              "nombre"
+                            ],
+                            "type": [
+                              "object",
+                              "null"
+                            ]
+                          },
                           "texto": {
                             "type": "string"
                           },
@@ -524,7 +567,8 @@
                         "required": [
                           "version",
                           "fecha",
-                          "texto"
+                          "texto",
+                          "publicadoPor"
                         ],
                         "type": "object"
                       },
